Fix home launcher flaky test

AppListPresenterDelegateHomeLauncherTest.BackgroundOpacity and
BackgroundBlur are flaky because IsBackgroundBlurEnabled() saves
feature flag in static variable.

Changes:
Remove static variable.

BUG=842027

Change-Id: I26c056ee72bac8490ca8a7b0b2555b90594b4980
Reviewed-on: https://chromium-review.googlesource.com/1055793
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557972}