ash/public/cpp/app_list/app_list_features.cc
@@ -29,9 +29,7 @@ bool IsAnswerCardEnabled() {
 }
 
 bool IsBackgroundBlurEnabled() {
-  static const bool enabled =
-      base::FeatureList::IsEnabled(kEnableBackgroundBlur);
-  return enabled;
+  return base::FeatureList::IsEnabled(kEnableBackgroundBlur);
 }
 
 bool IsPlayStoreAppSearchEnabled() {
